packages/domain/tests/fixtures/negative/internal-node-environment-extension.fixture.ts
import "@deepwork/sdk";
import "node:fs";
import "./missing-extension";

void process.env.FIXTURE_ONLY;
